--- a/templates/partials/event_item.html.twig
+++ b/templates/partials/event_item.html.twig
@@ -4,7 +4,7 @@
       
       {% set image = page.media.images|first %}
       {% if image != null %}
-          {{ image.cropZoom(960,280).html }}
+          {{ image.cropZoom(960,280).html(null, page.title) }}
       {% endif %}
 
     </header>
@@ -22,18 +22,25 @@
             <span class="year">{{ page.header.event.start|date("Y") }}</span>
           </time>
           
+          {% set location = header.event.location %}
+          {% set address = header.event.address %}
+          {% set coordinates = header.event.coordinates %}
+          
+          {% if location != null or address != null or coordinates != null %}
+            <div class="event-location-box">
+              {% if location != null %}
+                <p class="event-location">{{ location }}</p>
+              {% endif %}
 
-          {% if header.event.location != null %}
-            <p class="event-location">{{ header.event.location }}</p>
-          {% endif %}
+              {% if address != null %}
+                <p class="event-address">{{ address }}</p>
+              {% endif %}
 
-          {% if header.event.address != null %}
-            <p class="event-address">{{ header.event.address }}</p>
-          {% endif %}
-
-          {% if header.event.coordinates != null %}
-            {% set map_url = 'https://maps.googleapis.com/maps/api/staticmap?center=' ~ (header.event.coordinates|urlencode) ~ '&markers=color:blue|' ~ (header.event.coordinates|urlencode) ~ '&zoom=14&size=300x200&sensor=false' %}
-            <a href="https://www.google.com/maps/place/{{ header.event.address|urlencode }}" target="_blank" title="{{ header.event.address }}"><img src="{{ map_url }}" alt="{{ header.event.location }}" class="event-map" /></a>
+              {% if coordinates != null %}
+                {% set map_url = 'https://maps.googleapis.com/maps/api/staticmap?center=' ~ (coordinates|urlencode) ~ '&markers=color:blue|' ~ (coordinates|urlencode) ~ '&zoom=14&size=300x200&sensor=false' %}
+                <a href="https://www.google.com/maps/place/{{ address|urlencode }}" target="_blank" title="{{ address }}"><img src="{{ map_url }}" alt="{{ location }}" class="event-map" /></a>
+              {% endif %}
+            </div>
           {% endif %}
 
           {% if page.taxonomy.category %}
