begin adding info for repeat meta

--- a/templates/partials/event_item.html.twig
+++ b/templates/partials/event_item.html.twig
@@ -62,7 +62,7 @@
         {% if single == true %}{# individual content page #}
           <h2 class="event-title">{{ page.title }}</h2>
           <div class="event-content">{{ page.content }}</div>
-           {% include 'partials/event_meta.html.twig' with { 'page': page } %}
+           {#% include 'partials/event_meta.html.twig' with { 'page': page } %#}
 
         {% else %}{# main listing page #}          
           <h2 class="event-title"><a href="{{ page.url }}">{{ page.title }}</a></h2>
