--- a/templates/partials/event_meta.html.twig
+++ b/templates/partials/event_meta.html.twig
@@ -1,11 +1,14 @@
 <p class="event-meta {{ event_class }}">
     {% if page.header.event.freq is defined %}
-    	<span>Repeats {{ page.header.event.freq|capitalize }}</span>
+    	<span>Repeats {{ page.header.event.freq }}</span>
     {% endif %}
 
     {% if page.header.event.repeat is defined %}
-    {{ dump(page.header.event) }}
-    	<span>on {{ page.header.event.repeatDisplay }}</span>
+    	<span>on<span>
+        {% if page.header.event.freq != 'weekly' or page.header.event.freq != 'daily' %}
+            <span>{{ page.header.event.repeat_week }}</span>
+        {% endif %}
+        <span> {{ page.header.event.repeat_display }}</span>
     {% endif %}
 
     {% if page.header.event.until is defined %}
