--- a/scss/events.scss
+++ b/scss/events.scss
@@ -34,27 +34,27 @@ $largedesktop: new-breakpoint(min-width $largedesktop-size 16);
 // calender specific variables
 $calendar-control-button-bg:			#efefef !default;
 $calendar-control-button-color:			#222222 !default;
-$calendar-headings-bg:					transparent !default;
-$calendar-headings-color:				#222222 !default;
-$calendar-day-bg: 						#efefef !default;
-$calendar-day-color:					#222222 !default;
-$calendar-day-current-bg:				#1BB3E9 !default;
+$calendar-headings-bg:				transparent !default;
+$calendar-headings-color:			#222222 !default;
+$calendar-day-bg: 				#efefef !default;
+$calendar-day-color:				#222222 !default;
+$calendar-day-current-bg:			#1BB3E9 !default;
 $calendar-day-current-color:			#ffffff !default;
-$calendar-event-link-color:				#222222 !default;
-$calendar-day-block-bg:					#efefef !default;
+$calendar-event-link-color:			#222222 !default;
+$calendar-day-block-bg:				#efefef !default;
 
 // event(s) specific variables
-$event-item-border: 					1px solid #efefef !default;
+$event-item-border: 				1px solid #efefef !default;
 $event-image-border-radius: 			3px !default;
-$event-button-bg:						#1BB3E9 !default;
-$event-button-color:					#ffffff !default;
-$event-button-border:					2px solid $event-button-color !default;
-$event-button-hover-color:				#fff !default;
-$event-button-hover-bg:					$event-button-color !default;
-$event-button-hover-border:				2px solid $event-button-color !default;
+$event-button-bg:				#1BB3E9 !default;
+$event-button-color:				#ffffff !default;
+$event-button-border:				2px solid $event-button-color !default;
+$event-button-hover-color:			#fff !default;
+$event-button-hover-bg:				$event-button-color !default;
+$event-button-hover-border:			2px solid $event-button-color !default;
 $event-button-border-radius:			4px !default;
-$event-button-padding:					0.5rem 2rem;
-$event-border-radius: 					4px !default;
+$event-button-padding:				0.5rem 2rem;
+$event-border-radius: 				4px !default;
 
 /* html5 .calendar-hide */
 .calendar-hide {
@@ -362,6 +362,10 @@ $event-border-radius: 					4px !default;
 .events-container {
 	@include outer-container();
 
+	a {
+		transition: 0.3s;
+	}
+
 	.events-listing {
 		padding-bottom: 2rem;
 
@@ -588,13 +592,17 @@ $event-border-radius: 					4px !default;
 
 	a {
 		display: inline-block;
-		background: 1px solid $event-button-bg;
+		background: $event-button-bg;
 		color: $event-button-color;
 		border-radius: $event-border-radius;
 		padding: 0 0.5rem;
 		text-transform: uppercase;
 		font-size: .85rem;
 		font-weight: normal;
+
+		&:hover {
+			background: lighten($event-button-bg, 10);
+		}
 	}
 }
 
