--- a/templates/calendar.html.twig
+++ b/templates/calendar.html.twig
@@ -101,8 +101,8 @@
     <section class="calendar-details">
 
         <div class="calendar-day-details">
-            {% set day = "now"|date("d") %}
-            {% set month = "now"|date("m") %}
+            {% set day = "now"|date("j") %}
+            {% set month = "now"|date("n") %}
             {% set year = "now"|date("Y") %}
             <h3 class="day">{{ "now"|date(config.plugins.events.calendar.details.title) }}</h3>
             <ul>
