--- a/templates/partials/event_item.html.twig
+++ b/templates/partials/event_item.html.twig
@@ -1,12 +1,12 @@
 <article class="event-article">
 
-    
-
     {% include 'partials/event_item_header.html.twig' %}
 
     <section class="event-content">
       <div class="left-column">
         <div class="left-column-inner">
+
+          <time class="event-date-mobile" datetime="{{ page.date|date("c") }}">{{ page.header.event.start|date("l, F j, g:ia") }}</time>
 
           <time class="event-date" datetime="{{ page.date|date("c") }}">
             <span class="day">{{ page.header.event.start|date(config.plugins.events.event_item.day) }}</span>
